--- a/.github/workflows/docker-workflow.yml
+++ b/.github/workflows/docker-workflow.yml
@@ -15,4 +15,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: salmaath
+          tags: salmaath/rakamin-test:latest
